--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,4 +1,36 @@
 @import './reset.css';
-/* @import './listIndex.css';
-@import './listItem.css';
-@import './ItemDescription.css'; */
+
+* {
+  margin: 0;
+  padding: 0;
+  border: none;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  text-decoration: none;
+  color: #333;
+}
+
+ol, ul {
+	list-style: none;
+}
+
+html, body {
+  height: 100%;
+}
+
+.list-index {
+  padding: 5vh 7vw;
+}
+
+h1 {
+  padding-bottom: 3vh;
+  text-align: center;
+  letter-spacing: 1vw;
+  font-size: 5vh;
+  font-weight: 400;
+  color: #2d6987;
+}
+
+h2 {
+  font-size: 3vh;
+}
