Add scrolling functionality when clicked

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -45,7 +45,7 @@ h2 {
   margin-left: 1vw;
   padding: 4vw 0;
 
-  border: 1px solid #eaeaea;
+  border: 1px solid #e4e4e4;
   border-radius: 4px;
 }
 
